[gd_scene format=3 uid="uid://d3fu2o5ou5iu8"]

[ext_resource type="Script" uid="uid://5d86qcr0vjma" path="res://scenes/ui/screens/BlacksmithScreen.gd" id="1_script"]
[ext_resource type="Script" uid="uid://b3lx7madja3jq" path="res://scenes/ui/components/BlacksmithSlot.gd" id="2_slot"]

[node name="BlacksmithScreen" type="Control" unique_id=314757268]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="." unique_id=1118259729]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.08, 0.98)

[node name="MainLayout" type="VBoxContainer" parent="." unique_id=1034651267]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AnvilContainer" type="VBoxContainer" parent="MainLayout" unique_id=1394264477]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Header" type="Label" parent="MainLayout/AnvilContainer" unique_id=2145868675]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "DEMİRCİ ATÖLYESİ"
horizontal_alignment = 1

[node name="SlotsArea" type="HBoxContainer" parent="MainLayout/AnvilContainer" unique_id=1458692395]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50
alignment = 1

[node name="InputBox" type="VBoxContainer" parent="MainLayout/AnvilContainer/SlotsArea" unique_id=1687614805]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainLayout/AnvilContainer/SlotsArea/InputBox" unique_id=268599292]
layout_mode = 2
text = "GİRDİ"
horizontal_alignment = 1

[node name="InputSlot" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/InputBox" unique_id=992770240]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("2_slot")

[node name="ComponentBox" type="VBoxContainer" parent="MainLayout/AnvilContainer/SlotsArea" unique_id=1707616954]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox" unique_id=521094438]
layout_mode = 2
text = "MALZEMELER"
horizontal_alignment = 1

[node name="ComponentGrid" type="GridContainer" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox" unique_id=1388812360]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="Slot1" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=825454738]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 0

[node name="Slot2" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=1950060079]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 1

[node name="Slot3" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=1491784151]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 2

[node name="Slot4" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=739932738]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 3

[node name="Slot5" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=855572619]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 4

[node name="Slot6" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=1948789573]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 5

[node name="Slot7" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=1243248132]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 6

[node name="Slot8" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=853519153]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 7

[node name="Slot9" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/ComponentBox/ComponentGrid" unique_id=606541531]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 1
slot_index = 8

[node name="OutputBox" type="VBoxContainer" parent="MainLayout/AnvilContainer/SlotsArea" unique_id=916532065]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainLayout/AnvilContainer/SlotsArea/OutputBox" unique_id=717936446]
layout_mode = 2
text = "SONUÇ"
horizontal_alignment = 1

[node name="OutputSlot" type="Control" parent="MainLayout/AnvilContainer/SlotsArea/OutputBox" unique_id=2126967043]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
script = ExtResource("2_slot")
slot_type = 2

[node name="InfoLabel" type="Label" parent="MainLayout/AnvilContainer" unique_id=1063477827]
unique_name_in_owner = true
layout_mode = 2
text = "Yükseltmek için eşya ekleyin..."
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="MainLayout/AnvilContainer" unique_id=841016378]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="UpgradeButton" type="Button" parent="MainLayout/AnvilContainer/Buttons" unique_id=1225507283]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "YÜKSELT"

[node name="CancelButton" type="Button" parent="MainLayout/AnvilContainer/Buttons" unique_id=967166762]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "GERİ"

[node name="InventoryContainer" type="VBoxContainer" parent="MainLayout" unique_id=1955800235]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainLayout/InventoryContainer" unique_id=955128117]
layout_mode = 2
text = "ENVANTER"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainLayout/InventoryContainer" unique_id=853224588]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="MainLayout/InventoryContainer/ScrollContainer" unique_id=189799116]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryGrid" type="GridContainer" parent="MainLayout/InventoryContainer/ScrollContainer/CenterContainer" unique_id=168056441]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="SuccessParticles" type="CPUParticles2D" parent="." unique_id=1319665369]
unique_name_in_owner = true
position = Vector2(540, 960)
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 128.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(1, 0.843137, 0, 1)
